fix: styles issues *overflow overlay works only for supported browsers *remove duplicating styles

--- a/src/components/common/dropdown/dropdown.module.scss
+++ b/src/components/common/dropdown/dropdown.module.scss
@@ -86,52 +86,3 @@
   visibility: visible;
   z-index: 2000;
 }
-
-.options {
-  display: flex;
-  flex-direction: column;
-  margin: 10px 0px 15px;
-  font-size: 16px;
-  font-weight: 500;
-  max-height: 265px;
-  overflow-y: overlay;
-
-  /* width */
-  &::-webkit-scrollbar {
-    width: 20px;
-  }
-
-  /* Track */
-  &::-webkit-scrollbar-track {
-    background: none;
-  }
-
-  /* Handle */
-  &::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 5px 5px $thumb-scroll;
-    border: solid 6px transparent;
-    border-radius: 10px;
-  }
-
-  /* Handle on hover */
-  &::-webkit-scrollbar-thumb:hover {
-    box-shadow: inset 0 0 5px 5px #555;
-  }
-}
-
-.options__item {
-  padding: 10px 22px;
-  cursor: pointer;
-
-  &:hover {
-    background-color: $color;
-    color: $bg-color;
-  }
-}
-
-.options__text {
-  pointer-events: none;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
