--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@
 
 body {
   margin: 0;
-  overflow-y: overlay;
+  overflow-y: auto;
   background-color: $bg-color;
   color: $color;
   font-family: "Roboto", sans-serif;
@@ -32,4 +32,10 @@ ul {
 button {
   cursor: pointer;
   font-family: "Roboto", sans-serif;
+}
+
+@supports (overflow-y: overlay) {
+  body {
+    overflow-y: overlay;
+  }
 }
